(#3683) Pager Focus Cutoff Fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
@@ -87,7 +87,12 @@
 #NCI-trial-listing-app-root,
 #NCI-sws-app-root {
 	.pager__navigation li {
-		margin-left: 0;
+		margin-left: 2px;
+		margin-right: 2px;
+	}
+	.pager__navigation button {
+		padding-left: 4px;
+		padding-right: 4px;
 	}
 }
 
